# on-chain-metadata

./: Cargo.toml  README.md
on-chain-metadata/: Anchor.toml
on-chain-metadata-web/: package.json
on-chain-metadata-web/src/idl/: on_chain_metadata.json
on-chain-metadata-web/src/pages/api/: [account].ts
on-chain-metadata-web/src/types/: on_chain_metadata.ts
on-chain-metadata/programs/on-chain-metadata/: Cargo.toml
on-chain-metadata/programs/on-chain-metadata/src/: lib.rs
on-chain-metadata/tests/: on-chain-metadata.ts
programs/on-chain-metadata/: Cargo.toml
programs/on-chain-metadata/src/: lib.rs  tmp.json
