[package]
name = "on-chain-metadata"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "on_chain_metadata"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
borsh = "0.10.3"
shank = "0.0.12"
solana-program = "1.15.2"
